--- a/strch.html
+++ b/strch.html
@@ -34,9 +34,9 @@ header("Cache-Control: max-age=120, must-revalidate");
         <br>
         <label for="teamSelector">Select Team:</label>
         <select id="teamSelector"></select>
-        <!-- <input id="customTeamId" type="text"> -->
+        <input id="customTeamId" type="text">
         <!-- <button id="searchTeamButton">Search</button> -->
-        <button id="refreshButton">Refresh</button>
+        <!-- §<button id="refreshButton">Refresh</button> -->
         <p id="teamBalance"></p>
         <p id="weeklyBlocks"></p>
         <div class="table-container">
