--- a/strch.html
+++ b/strch.html
@@ -32,11 +32,9 @@ header("Cache-Control: max-age=120, must-revalidate");
         <div id="totalBalanceRow"></div>
         <canvas id="minerChart"></canvas>
         <br>
-        <label for="teamSelector">Select Team:</label>
+        <label for="teamSelector">Select Company:</label>
         <select id="teamSelector"></select>
         <input id="customTeamId" type="text">
-        <!-- <button id="searchTeamButton">Search</button> -->
-        <!-- §<button id="refreshButton">Refresh</button> -->
         <p id="teamBalance"></p>
         <p id="weeklyBlocks"></p>
         <div class="table-container">
