--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ header("Content-Security-Policy:
         <h1>The Dutch Stake Pool</h1>
         <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" loading="lazy">
         
-            <p>The one-stop shop for staking/mining $ADA, $IAG and $STRCH.</p>
+            <p>The one-stop shop for staking/mining $ADA, $IAG, $STRCH, $XER, $COPI and running the Blockfrost Icebreaker node.</p>
 
         <div class="links">
             <table>
@@ -98,7 +98,7 @@ header("Content-Security-Policy:
             </table>
         </div>
         <div class="prices">
-            <p><strong>ADA:</strong> <span id="ada-price">Loading...</span> <strong>IAG:</strong> <span id="iag-price">Loading...</span>
+            <p><strong>ADA:</strong> <span id="ada-price">Loading...</span> | <strong>IAG:</strong> <span id="iag-price">Loading...</span> | <strong>STRCH:</strong> <span id="strch-price">Loading...</span> | <strong>XER:</strong> <span id="xer-price">Loading...</span> | <strong>COPI:</strong> <span id="copi-price">Loading...</span>
             </p>
         </div>
         <footer>
