--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@ header("Content-Security-Policy:
                         </a>
                     </td>
                     <td>
+                        <a href="https://xerberus.io/" target="_blank" rel="noopener noreferrer" aria-label="Xerberus.io">
+                            <img src="Xer_Logo.webp" alt="What is Xerberus" class="hover-effect">
+                        </a>
+                    </td>
+                    <td>
+                        <a href="https://cornucopias.io/" target="_blank" rel="noopener noreferrer" aria-label="Cornucopias.io">
+                            <img src="copi_logo.webp" alt="What is Xerberus" class="hover-effect">
+                        </a>
+                    </td>
+                    <td>
                         <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow The Dutch Stake Pool on Twitter">
                             <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter" class="hover-effect">
                         </a>
