--- a/index.html
+++ b/index.html
@@ -86,12 +86,17 @@ header("Content-Security-Policy:
                     </td>
                     <td>
                         <a href="https://xerberus.io/" target="_blank" rel="noopener noreferrer" aria-label="Xerberus.io">
-                            <img src="Xer_Logo.webp" alt="What is Xerberus" class="hover-effect">
+                            <img src="Xer_Logo.webp" alt="Xerberus.io" class="hover-effect">
                         </a>
                     </td>
                     <td>
                         <a href="https://cornucopias.io/" target="_blank" rel="noopener noreferrer" aria-label="Cornucopias.io">
-                            <img src="copi_logo.webp" alt="What is Xerberus" class="hover-effect">
+                            <img src="copi_logo.webp" alt="Cornucopias.io" class="hover-effect">
+                        </a>
+                    </td>
+                    <td>
+                        <a href="https://blockfrost.io/" target="_blank" rel="noopener noreferrer" aria-label="Blockfrost.io">
+                            <img src="Icebreaker_logo.webp" alt="Blockfrost.io" class="hover-effect">
                         </a>
                     </td>
                     <td>
@@ -109,6 +114,7 @@ header("Content-Security-Policy:
         </div>
         <div class="prices">
             <p><strong>ADA:</strong> <span id="ada-price">Loading...</span> | <strong>IAG:</strong> <span id="iag-price">Loading...</span> | <strong>STRCH:</strong> <span id="strch-price">Loading...</span> | <strong>XER:</strong> <span id="xer-price">Loading...</span> | <strong>COPI:</strong> <span id="copi-price">Loading...</span>
+            Price powered by <a href="https://www.coingecko.com" target="_blank" rel="noopener noreferrer" aria-label="Coingecko">Coingecko</a> and <a href="https://www.geckoterminal.com" target="_blank" rel="noopener noreferrer" aria-label="Geckoterminal">Geckoterminal</a>
             </p>
         </div>
         <footer>
