--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ header("Content-Security-Policy:
             </table>
         </div>
         <div class="prices">
-            <p><strong>ADA:</strong> <span id="ada-price">Loading...</span> | <strong>IAG:</strong> <span id="iag-price">Loading...</span> | <strong>STRCH:</strong> <span id="strch-price">Loading...</span> | <strong>XER:</strong> <span id="xer-price">Loading...</span> | <strong>COPI:</strong> <span id="copi-price">Loading...</span>
+            <p><strong>ADA:</strong> <span id="ada-price">Loading...</span> | <strong>IAG:</strong> <span id="iag-price">Loading...</span> | <strong>STRCH:</strong> <span id="strch-price">Loading...</span> | <strong>XER:</strong> <span id="xer-price">Loading...</span> | <strong>COPI:</strong> <span id="copi-price">Loading...</span><br>
             Price powered by <a href="https://www.coingecko.com" target="_blank" rel="noopener noreferrer" aria-label="Coingecko">Coingecko</a> and <a href="https://www.geckoterminal.com" target="_blank" rel="noopener noreferrer" aria-label="Geckoterminal">Geckoterminal</a>
             </p>
         </div>
