--- a/strchold.html
+++ b/strchold.html
@@ -95,6 +95,21 @@ header("Cache-Control: max-age=120, must-revalidate");
                     </a>
                 </td>
                 <td>
+                    <a href="https://xerberus.io/" target="_blank" rel="noopener noreferrer" aria-label="Xerberus.io">
+                        <img src="Xer_Logo.webp" alt="Xerberus.io" class="hover-effect">
+                    </a>
+                </td>
+                <td>
+                    <a href="https://cornucopias.io/" target="_blank" rel="noopener noreferrer" aria-label="Cornucopias.io">
+                        <img src="copi_logo.webp" alt="Cornucopias.io" class="hover-effect">
+                    </a>
+                </td>
+                <td>
+                    <a href="https://blockfrost.io/" target="_blank" rel="noopener noreferrer" aria-label="Blockfrost.io">
+                        <img src="Icebreaker_logo.webp" alt="Blockfrost.io" class="hover-effect">
+                    </a>
+                </td>
+                <td>
                     <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer"
                         aria-label="Follow The Dutch Stake Pool on Twitter">
                         <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter"
