--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ header("Content-Security-Policy:
         <h1>The Dutch Stake Pool</h1>
         <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" loading="lazy">
         
-            <p>The one-stop shop for staking/mining $ADA, $IAG, $STRCH, $XER, $COPI and running the Blockfrost Icebreaker node.</p>
+            <p>The one-stop shop for staking and node operations.</p>
 
         <div class="links">
             <table>
