--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@ header("Content-Security-Policy:
                         </a>
                     </td>
                     <td>
-                        <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
+                        <a href="iagon.html" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
                             <img src="iagonLogoLight.webp" alt="Join The Iagon Node" class="hover-effect">
                         </a>
                     </td>
