--- a/strch.html
+++ b/strch.html
@@ -82,7 +82,7 @@ header("Cache-Control: max-age=120, must-revalidate");
                     </a>
                 </td>
                 <td>
-                    <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer"
+                    <a href="iagon.html" target="_blank" rel="noopener noreferrer"
                         aria-label="Stake to Iagon Node">
                         <img src="iagonLogoLight.webp" alt="Join The Iagon Node" class="hover-effect">
                     </a>
