--- a/poolstats.html
+++ b/poolstats.html
@@ -58,7 +58,7 @@
             </a>
         </td>
         <td>
-            <a href="https://app.iagon.com/" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
+            <a href="iagon.html" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
                 <img src="iagonLogoLight.webp" alt="Join The Iagon Node" class="hover-effect">
             </a>
         </td>
@@ -89,6 +89,5 @@
       &copy; 2025 The Dutch Stake Pool. All rights reserved.
   </footer>
 </main>
-  </main>
 </body>
 </html>
