--- a/iagon2.html
+++ b/iagon2.html
@@ -25,7 +25,50 @@ header("Content-Security-Policy:
     <script src="chart.js"></script>
     <main class="container">
     <h1>Iagon Node Stats</h1>
-<strong>Wait for it</strong>
+    <canvas id="performanceChart"></canvas>
+    <section>
+        <table>
+            <tr>
+                <td><strong>Node Name</strong></td>
+                <td id="name">Loading...</td>
+            </tr>
+            <tr>
+                <td><strong>Status</strong></td>
+                <td id="status-text">Loading...</td>
+            </tr>
+            <tr>
+                <td><strong>Location</strong></td>
+                <td id="location">Loading...</td>
+            </tr>
+            <tr>
+                <td><strong>Total Storage</strong></td>
+                <td id="total-storage">Loading...</td>
+            </tr>
+            <tr>
+                <td><strong>Committed Storage</strong></td>
+                <td id="committed-storage">Loading...</td>
+            </tr>
+            <tr>
+                <td><strong>Used Storage</strong></td>
+                <td id="used-storage">Loading...</td>
+            </tr>
+            <tr>
+                <td><strong>Available Storage</strong></td>
+                <td id="storage-available">Loading...</td>
+            </tr>
+            <tr>
+                <td><strong>IAG Staked</strong></td>
+                <td id="staked">Loading...</td>
+            </tr>
+            <tr>
+                <td><strong>IAG Rewards to date</strong></td>
+                <td id="rewards">Loading...</td>
+            </tr>
+            <tr>
+                <td><strong>ADA Fees to date</strong></td>
+                <td id="fees">Loading...</td>
+            </tr>
+        </table>
     </section>
     <div class="small-text">Source <a href="https://iagon.com/" target="_blank" rel="noopener noreferrer"
         aria-label="iagon.com">https://iagon.com/</a></div>
