--- a/about.html
+++ b/about.html
@@ -66,27 +66,28 @@ header("Content-Security-Policy:
             <table>
                 <tr>
                     <td>
-                        <a href="index.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Home">
-                            <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" class="hover-effect">
-                    </td>
-                    <td>
-                        <a href="poolstats.html" rel="noopener noreferrer" aria-label="Pool Stats">
-                            <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics" class="hover-effect">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats">
-                            <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company" class="hover-effect">
-                        </a>
-                    </td>
+                        <td>
+                            <a href="index.html" rel="noopener noreferrer" aria-label="Home">
+                                <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" class="hover-effect">
+                        </td>
+                        <td>
+                            <a href="poolstats.html" rel="noopener noreferrer" aria-label="SPO Stats">
+                                <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics" class="hover-effect">
+                            </a>
+                        </td>
+                        <td>
+                            <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Stats">
+                                <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company" class="hover-effect">
+                            </a>
+                        </td>
+                        <td>
+                            <a href="iagon.html" rel="noopener noreferrer" aria-label="Iagon Stats">
+                                <img src="iagonLogoLight.webp" alt="Join The Iagon Node" class="hover-effect">
+                            </a>
+                        </td>
                     <td>
                         <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="Stake Now">
                             <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us" class="hover-effect">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="iagon.html" target="_blank" rel="noopener noreferrer" aria-label="Stake to Iagon Node">
-                            <img src="iagonLogoLight.webp" alt="Join The Iagon Node" class="hover-effect">
                         </a>
                     </td>
                     <td>
