--- a/iagon.html
+++ b/iagon.html
@@ -77,23 +77,21 @@ header("Content-Security-Policy:
             <table>
                 <tr>
                     <td>
-                        <a href="index.html" rel="noopener noreferrer" aria-label="The Dutch Stake Pool - Home">
-                            <img src="tdsp_logo.webp"
-                                alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool"
-                                class="hover-effect">
-                    </td>
+                        <td>
+                            <a href="index.html" rel="noopener noreferrer" aria-label="Home">
+                                <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" class="hover-effect">
+                        </td>
+                        <td>
+                            <a href="about.html" rel="noopener noreferrer" aria-label="About">
+                                <img src="about_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" class="hover-effect">
+                        </td>
+                        <td>
+                            <a href="poolstats.html" rel="noopener noreferrer" aria-label="SPO Stats">
+                                <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics" class="hover-effect">
+                            </a>
+                        </td>
                     <td>
-                        <a href="about.html" rel="noopener noreferrer" aria-label="About The Dutch Stake Pool">
-                            <img src="about_logo.webp"
-                                alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool">
-                    </td>
-                    <td>
-                        <a href="poolstats.html" rel="noopener noreferrer" aria-label="Pool Stats">
-                            <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics" class="hover-effect">
-                        </a>
-                    </td>
-                    <td>
-                        <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats">
+                        <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Stats">
                             <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company" class="hover-effect">
                         </a>
                     </td>
