--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
        
     <link rel="icon" sizes="192x192" href="tdsp_logo_ico.webp">
     <link rel="apple-touch-icon" href="tdsp_logo_ico.webp">
-    <link rel="manifest" href="manifest.json">
+    <link rel="manifest" href="manifest.json" type="application/manifest+json">
 
     <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
-    <link rel="icon" href="tdsp_logo_ico.webp" type="image/webp">
+    <link rel="icon" type="image/webp" sizes="192x192" href="tdsp_logo_ico.webp">
 
     <!-- Preload Main Logo -->
     <link rel="preload" href="tdsp_logo.webp" as="image">
@@ -52,6 +52,7 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
                     <td>
                         <a href="about.html" rel="noopener noreferrer" aria-label="About">
                             <img src="about_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" class="hover-effect">
+                        </a>
                     </td>
                     <td>
                         <a href="poolstats.html" rel="noopener noreferrer" aria-label="SPO Stats">
