--- a/poolstats.html
+++ b/poolstats.html
@@ -12,14 +12,12 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
 </head>
 <body>
   <main class="container">
-    <h1>Pool Stats</h1>
+    <h1>SPO Stats</h1>
     <section>
       
       <table id="data-table">
-        <th>
           <tr>
           </tr>
-        </th>
       </table>
       <div class="small-text">Source: <a href="https://cexplorer.io" target="_blank" rel="noopener noreferrer"
         aria-label="Cexplorer">http://cexplorer.io</a></div>
