--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Dutch Stake Pool | About</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/webp" sizes="192x192" href="tdsp_logo_ico.webp">
 </head>
 <body>
     <main class="container">
@@ -56,27 +57,27 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
         </section>
         <div class="links">
             <table>
-                <tr>
+                <tr>                 
                     <td>
-                        <td>
-                            <a href="index.html" rel="noopener noreferrer" aria-label="Home">
-                                <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" class="hover-effect">
-                        </td>
-                        <td>
-                            <a href="poolstats.html" rel="noopener noreferrer" aria-label="SPO Stats">
-                                <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics" class="hover-effect">
-                            </a>
-                        </td>
-                        <td>
-                            <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Stats">
-                                <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company" class="hover-effect">
-                            </a>
-                        </td>
-                        <td>
-                            <a href="iagon.html" rel="noopener noreferrer" aria-label="Iagon Stats">
-                                <img src="iagonLogoLight.webp" alt="Join The Iagon Node" class="hover-effect">
-                            </a>
-                        </td>
+                        <a href="index.html" rel="noopener noreferrer" aria-label="Home">
+                            <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" class="hover-effect">
+                        </a>
+                    </td>
+                    <td>
+                        <a href="poolstats.html" rel="noopener noreferrer" aria-label="SPO Stats">
+                            <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics" class="hover-effect">
+                        </a>
+                    </td>
+                    <td>
+                        <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Stats">
+                            <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company" class="hover-effect">
+                        </a>
+                    </td>
+                    <td>
+                        <a href="iagon.html" rel="noopener noreferrer" aria-label="Iagon Stats">
+                            <img src="iagonLogoLight.webp" alt="Join The Iagon Node" class="hover-effect">
+                        </a>
+                    </td>
                     <td>
                         <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="Stake Now">
                             <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us" class="hover-effect">
