--- a/iagon.html
+++ b/iagon.html
@@ -14,7 +14,7 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
     <script src="iagon.js" nonce="<?= $GLOBALS['csp_nonce'] ?>" defer></script>
     <script src="chart.js" nonce="<?= $GLOBALS['csp_nonce'] ?>" defer></script>
     <main class="container">
-    <h1>Iagon Node Stats</h1>
+    <h1>Iagon Stats</h1>
     <canvas id="performanceChart"></canvas>
     <section>
         <table>
