--- a/strch.html
+++ b/strch.html
@@ -15,7 +15,7 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
     <script src="strch.js" nonce="<?= $GLOBALS['csp_nonce'] ?>" defer></script>
     <script src="chart.js" nonce="<?= $GLOBALS['csp_nonce'] ?>"></script>
     <main class="container">
-        <h1 id="teamName"></h1>
+        <h1>Starch Stats</h1>
         <div id="totalBalanceRow"></div>
         <canvas id="minerChart"></canvas>
         <br>
