--- a/poolstats.html
+++ b/poolstats.html
@@ -19,10 +19,8 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
           <tr>
           </tr>
       </table>
-      <div class="small-text">Source: <a href="https://cexplorer.io" target="_blank" rel="noopener noreferrer"
-        aria-label="Cexplorer">http://cexplorer.io</a></div>
-      <div class="small-text">Disclaimer <a href="https://cexplorer.io/disclaimer" target="_blank" rel="noopener noreferrer"
-              aria-label="https://cexplorer.io/disclaimer">https://cexplorer.io/disclaimer</a></div>
+      <div class="small-text">Source: <a href="https://adastat.net/" target="_blank" rel="noopener noreferrer"
+        aria-label="ADASTAT">https://adastat.net/</a></div>
     </section>
     <script src="poolstats.js" nonce="<?= $GLOBALS['csp_nonce'] ?>"></script>
     <div class="links">
