--- a/poolstats.html
+++ b/poolstats.html
@@ -4,77 +4,45 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>The Dutch Stake Pool | Stats</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/webp" sizes="192x192" href="tdsp_logo_ico.webp">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Dutch Stake Pool | Stats</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/webp" sizes="192x192" href="tdsp_logo_ico.webp">
 </head>
 <body>
-  <main class="container">
+    <main class="container">
     <h1>SPO Stats</h1>
     <section>
       
-      <table id="data-table">
-          <tr>
-          </tr>
-      </table>
-      <div class="small-text">Source: <a href="https://adastat.net/" target="_blank" rel="noopener noreferrer"
-        aria-label="ADASTAT">https://adastat.net/</a></div>
+    <table id="data-table">
+        <tr>
+        </tr>
+    </table>
+    <div class="small-text">Source: <a href="https://adastat.net/" target="_blank" rel="noopener noreferrer"
+    aria-label="ADASTAT">https://adastat.net/</a></div>
     </section>
     <script src="poolstats.js" nonce="<?= $GLOBALS['csp_nonce'] ?>"></script>
-    <div class="links">
-      <table>
-          <tr>
-            <td>
-              <a href="index.html" rel="noopener noreferrer" aria-label="Home">
-                  <img src="tdsp_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" class="hover-effect">
-          </td>
-          <td>
-              <a href="about.html" rel="noopener noreferrer" aria-label="About">
-                  <img src="about_logo.webp" alt="The Dutch Stake Pool Logo - Reliable Bare-Metal Low-Fee Stake Pool" class="hover-effect">
-          </td>
-        <td>
-            <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Stats">
-                <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company" class="hover-effect">
-            </a>
-        </td>
-        <td>
-          <a href="iagon.html" rel="noopener noreferrer" aria-label="Iagon Stats">
-              <img src="iagonLogoLight.webp" alt="Join The Iagon Node" class="hover-effect">
-          </a>
-      </td>
-        <td>
-            <a href="https://tool.jamonbread.io/delegate/pool1ksye6zwlzaytspldngc3966aj79zkjvmkykydu2txay75c0krfp" target="_blank" rel="noopener noreferrer" aria-label="Stake Now">
-                <img src="stakebutton_ico.webp" alt="Join The Dutch Stake Pool - Stake with us" class="hover-effect">
-            </a>
-        </td>
-        <td>
-          <a href="https://xerberus.io/" target="_blank" rel="noopener noreferrer" aria-label="Xerberus.io">
-              <img src="Xer_Logo.webp" alt="Xerberus.io" class="hover-effect">
-          </a>
-      </td>
-      <td>
-          <a href="https://cornucopias.io/" target="_blank" rel="noopener noreferrer" aria-label="Cornucopias.io">
-              <img src="copi_logo.webp" alt="Cornucopias.io" class="hover-effect">
-          </a>
-      </td>
-      <td>
-          <a href="https://blockfrost.io/" target="_blank" rel="noopener noreferrer" aria-label="Blockfrost.io">
-              <img src="Icebreaker_logo.webp" alt="Blockfrost.io" class="hover-effect">
-          </a>
-      </td>
-        <td>
-            <a href="https://twitter.com/DamionDutch" target="_blank" rel="noopener noreferrer" aria-label="Follow The Dutch Stake Pool on Twitter">
-                <img src="X-logo_ico.webp" alt="Follow The Dutch Stake Pool on Twitter" class="hover-effect">
-            </a>
-        </td>
-          </tr>
-      </table>
-  </div>
-  <footer>
-      &copy; 2025 The Dutch Stake Pool. All rights reserved.
-  </footer>
-</main>
+    <div id="links-container"></div>
+    <script>
+        // Load the external HTML file and inject it
+        fetch('links.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('links-container').innerHTML = data;
+    
+                // Load stakenow.js after the HTML is injected
+                const script = document.createElement('script');
+                script.src = 'links.js';
+                script.defer = true;
+                script.setAttribute('nonce', '<?= $GLOBALS["csp_nonce"] ?>');
+                document.body.appendChild(script);
+            })
+            .catch(error => console.error('Error loading links.html:', error));
+    </script>
+    <footer>
+        &copy; 2025 The Dutch Stake Pool. All rights reserved.
+    </footer>
+    </main>
 </body>
 </html>
