--- a/iagon.html
+++ b/iagon.html
@@ -55,6 +55,10 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
                 <td id="rewards">Loading...</td>
             </tr>
             <tr>
+                <td><strong>IAG Rewards to date (USD)</strong></td>
+                <td id="reward-usd">Loading...</td>
+            </tr>
+            <tr>
                 <td><strong>ADA Fees to date</strong></td>
                 <td id="fees">Loading...</td>
             </tr>
