remove xerberus end cpoy node

--- a/poolstats.html
+++ b/poolstats.html
@@ -19,7 +19,7 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
         <tr>
         </tr>
     </table>
-    <div class="small-text">Source: <a href="https://adastat.net/" target="_blank" rel="noopener noreferrer"
+    <div class="small-text">Source: <a href="https://adastat.net/pools/b4099d09df1748b807ed9a3112eb5d978a2b499bb12c46f14b3749ea" target="_blank" rel="noopener noreferrer"
     aria-label="ADASTAT">https://adastat.net/</a></div>
     </section>
     <script src="poolstats.js" nonce="<?= $GLOBALS['csp_nonce'] ?>"></script>
