--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
     </script>
     
     <div class="prices">
-        <p><strong>ADA:</strong> <span id="ada-price">Loading...</span> | <strong>IAG:</strong> <span id="iag-price">Loading...</span> | <strong>STRCH:</strong> <span id="strch-price">Loading...</span> | <strong>XER:</strong> <span id="xer-price">Loading...</span> | <strong>COPI:</strong> <span id="copi-price">Loading...</span><br>
+        <p><strong>ADA:</strong> <span id="ada-price">Loading...</span> | <strong>IAG:</strong> <span id="iag-price">Loading...</span> | <strong>STRCH:</strong> <span id="strch-price">Loading...</span><br>
         Price powered by <a href="https://www.coingecko.com" target="_blank" rel="noopener noreferrer" aria-label="Coingecko">Coingecko</a> and <a href="https://www.geckoterminal.com" target="_blank" rel="noopener noreferrer" aria-label="Geckoterminal">Geckoterminal</a>
         </p>
     </div>
