--- a/starch.html
+++ b/starch.html
@@ -12,7 +12,7 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
     <link rel="icon" type="image/webp" sizes="192x192" href="tdsp_logo_ico.webp">
 </head>
 <body>
-    <script src="strch.js" nonce="<?= $GLOBALS['csp_nonce'] ?>" defer></script>
+    <script src="starch.js" nonce="<?= $GLOBALS['csp_nonce'] ?>" defer></script>
     <script src="chart.js" nonce="<?= $GLOBALS['csp_nonce'] ?>"></script>
     <main class="container">
         <h1>Starch Stats</h1>
