--- a/links.html
+++ b/links.html
@@ -9,7 +9,7 @@
         <a href="poolstats.html" rel="noopener noreferrer" aria-label="SPO Stats">
             <img src="stats_ico.webp" alt="The Dutch Stake Pool - Statistics" class="hover-effect">
         </a>
-        <a href="strch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats">
+        <a href="starch.html" rel="noopener noreferrer" aria-label="Starch Miner Company Stats">
             <img src="starchCompanyLogo.webp" alt="Join TDSP Starch Company" class="hover-effect">
         </a>
         <a href="iagon.html" rel="noopener noreferrer" aria-label="Iagon Stats">
