--- a/iagon.html
+++ b/iagon.html
@@ -35,17 +35,18 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
                 <td id="total-storage">Loading...</td>
             </tr>
             <tr>
-                <td><strong>Committed Storage</strong></td>
+                <td><strong>Staked</strong></td>
                 <td id="committed-storage">Loading...</td>
+            </tr>
+            <tr>
+                <td><strong>Available to Stake</strong></td>
+                <td id="available-to-stake">Loading...</td>
             </tr>
             <tr>
                 <td><strong>Used Storage</strong></td>
                 <td id="used-storage">Loading...</td>
             </tr>
-            <tr>
-                <td><strong>Available Storage</strong></td>
-                <td id="storage-available">Loading...</td>
-            </tr>
+
             <tr>
                 <td><strong>IAG Staked</strong></td>
                 <td id="staked">Loading...</td>
