--- a/iagon.html
+++ b/iagon.html
@@ -35,7 +35,7 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
                 <td id="total-storage">Loading...</td>
             </tr>
             <tr>
-                <td><strong>Staked</strong></td>
+                <td><strong>Staked Storage</strong></td>
                 <td id="committed-storage">Loading...</td>
             </tr>
             <tr>
