update favicon not working

--- a/index.html
+++ b/index.html
@@ -24,14 +24,13 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
     <meta name="apple-mobile-web-app-title" content="The Dutch Stake Pool">
     <meta name="theme-color" content="#b0adad">
     <meta name="msapplication-navbutton-color" content="#b0adad">
+    <meta name="msapplication-TileImage" content="favicon.ico">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-       
-    <link rel="icon" sizes="192x192" href="tdsp_logo_ico.webp">
+
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="tdsp_logo_ico.webp">
     <link rel="manifest" href="manifest.json" type="application/manifest+json">
-
     <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
-    <link rel="icon" type="image/webp" sizes="192x192" href="tdsp_logo_ico.webp">
 
     <!-- Preload Main Logo -->
     <link rel="preload" href="tdsp_logo.webp" as="image">
