--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ require_once 'security-headers.php'; // must be first, before any HTML is sent
     <meta name="msapplication-TileImage" content="favicon.ico">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" href="tdsp_logo_ico.webp">
-    <link rel="manifest" href="manifest.json" type="application/manifest+json">
+    <link rel="icon" href="favicon.png" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.png">
+    <link rel="manifest" href="manifest.json" type="application/json">
     <title>The Dutch Stake Pool | Reliable Cardano Staking</title>
 
     <!-- Preload Main Logo -->
